# huffman-avx512

./: .bazelrc  LICENSE  MODULE.bazel  README.md  make_table.py
codec/: BUILD.bazel  compress_tool.cpp  heap.h  histogram.cpp  histogram.h  histogram_benchmark.cpp  histogram_test.cpp  huff0.cpp  huff0.h  huffman.cpp  huffman.h  huffman_benchmark.cpp  huffman_test.cpp
