###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "huffdude", version = "0.0.1")


# bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "googletest", version = "1.17.0")
# bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
# bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
# bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.1")

# Hedron's Compile Commands Extractor for Bazel
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest
    # (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see
    # "Suggestion: Updates" in the README).
)

bazel_dep(name = "google_benchmark", version = "1.9.4")

bazel_dep(name = "finite_state_entropy", version = "0.9.0")
git_override(
    module_name = "finite_state_entropy",
    remote = "/home/aleksi/source/FiniteStateEntropy",
    commit = 
    "5041a44233e52882dc6af975a75db1a0a06cd315"
    ,
)
