cc_library(
  name = "huffman",
  srcs = ["huffman.cpp"],
  hdrs = ["huffman.h"],
)

cc_test(
  name = "huffman_test",
  srcs = ["huffman_test.cpp"],
  deps = [
    ":huffman",
    "@googletest//:gtest_main"
  ],
)

cc_binary(
  name = "huffman_benchmark",
  srcs = ["huffman_benchmark.cpp"],
  deps = [
    ":huffman",
    "@google_benchmark//:benchmark_main"
  ],
)

