cc_library(
  name = "huffman",
  srcs = ["huffman.cpp"],
  hdrs = ["huffman.h"],
)

cc_library(
  name = "huff0",
  srcs = ["huff0.cpp"],
  hdrs = ["huff0.h"],
  deps = [
    "@finite_state_entropy//:lib",
  ]
)

cc_test(
  name = "huffman_test",
  srcs = ["huffman_test.cpp"],
  deps = [
    ":huffman",
    ":huff0",
    "@googletest//:gtest_main"
  ],
)

cc_binary(
  name = "huffman_benchmark",
  srcs = ["huffman_benchmark.cpp"],
  linkopts = ['-lprofiler'],
  deps = [
    ":huffman",
    ":huff0",
    "@google_benchmark//:benchmark_main"
  ],
)

